# projetcpp-smartclothing-2a34

./: Article.cpp  Article.h  CHEMISES.qrc  CMakeLists.txt  Enfant.qrc  PHOTO.qrc  arduino.cpp  arduino.h  arduinod.cpp  arduinod.h  arduinors.cpp  arduinors.h  articlenotifier.cpp  articlenotifier.h  client.cpp  client.h  connection.cpp  connection.h  employe.cpp  employe.h  employe.pro  employerami.pro  ggggggggg.qrc  historique_transaction.txt  image.qrc  images.qrc  interfacenshlahekhrupdate.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notification.h  notification.qrc  projet_Ahmed.pro  resources.qrc  speech_to_text.py  transaction.cpp  transaction.h  vocale.cpp  vocale.h
OURSQL/: ARTICLE.db.dmd
OURSQL/ARTICLE.db/: dl_settings.xml
OURSQL/ARTICLE.db/businessinfo/: Business Information.xml
OURSQL/ARTICLE.db/datatypes/: DataTypes.xml
OURSQL/ARTICLE.db/datatypes/structuredtype/seg_0/: 47E390DE-0671-C4B1-8428-0F45CBEE18F8.xml  F72C39E0-D1CA-8821-2AD7-A1E95A37D3D1.xml
OURSQL/ARTICLE.db/datatypes/subviews/: 2E18B37A-EB13-C859-869A-2694AB1632A5.xml
OURSQL/ARTICLE.db/logical/: Logical.xml
OURSQL/ARTICLE.db/logical/subviews/: 0F673FB6-F262-15CE-9E71-EF9644697F00.xml
OURSQL/ARTICLE.db/pm/: Process Model.xml
OURSQL/ARTICLE.db/rel/: 35D03259-AADF19E9FCAD.xml
OURSQL/ARTICLE.db/rel/35D03259-AADF19E9FCAD/subviews/: 3D10F725-E766-0EDB-96BC-3D74247CF0AC.xml
projet_Ahmed/: client.h  connection.cpp  connection.h  main.cpp  mainwindow.h  mainwindow.ui  projet_Ahmed.pro
